# bekas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: SAFETY.md
src/bekas/: __init__.py  clean.py  cli.py  config.py  database.py  doctor.py  events.py  formatters.py  locking.py  models.py  plugin.py  quarantine.py  runner.py  safety.py  signing.py  tui.py
src/bekas/plugins/: browser_chrome.py  browser_firefox.py  browser_safari.py  cargo_registry.py  docker_buildx.py  docker_containers.py  docker_images.py  dotfiles_backups.py  downloads.py  git_branches.py  go_modcache.py  gradle_caches.py  jetbrains_caches.py  maven_repo.py  node_modules.py  pip_cache.py  pnpm_store.py  poetry_cache.py  python_cache.py  python_venvs.py  rust_target.py  screenshots.py  system_tmp.py  system_trash.py  uv_cache.py  vscode_extensions.py  xcode_derived_data.py  xcode_simulators.py  yarn_cache.py
tests/: conftest.py  test_browser_chrome.py  test_browser_firefox.py  test_browser_safari.py  test_cargo_registry.py  test_clean.py  test_clean_branches.py  test_cli.py  test_cli_config.py  test_cli_doctor.py  test_cli_edge.py  test_cli_tui.py  test_cli_welcome.py  test_config.py  test_database.py  test_docker_buildx.py  test_docker_containers.py  test_docker_images.py  test_docker_images_branches.py  test_doctor.py  test_doctor_branches.py  test_dotfiles_backups.py  test_downloads.py  test_formatters.py  test_formatters_branches.py  test_git_branches.py  test_go_modcache.py  test_gradle_caches.py  test_jetbrains_caches.py  test_locking.py  test_locking_branches.py  test_maven_repo.py  test_models.py  test_node_modules.py  test_node_modules_branches.py  test_pip_cache.py  test_plugin_base.py  test_plugin_branches.py  test_pnpm_store.py  test_poetry_cache.py  (+20 more)
tests/integration/: __init__.py  test_end_to_end.py  test_plugins_integration.py
