[project]
name = "bekas"
version = "0.1.2"
description = "A CLI utility that audits your local machine for stuff you forgot and helps you safely reclaim disk space."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.50",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-pyyaml",
    "types-psutil",
]

[project.scripts]
bekas = "bekas.cli:main"

[project.entry-points."bekas.plugins"]
docker_images = "bekas.plugins.docker_images:DockerImagesPlugin"
docker_containers = "bekas.plugins.docker_containers:DockerContainersPlugin"
python_venvs = "bekas.plugins.python_venvs:PythonVenvsPlugin"
dotfiles_backups = "bekas.plugins.dotfiles_backups:DotfilesBackupsPlugin"
node_modules = "bekas.plugins.node_modules:NodeModulesPlugin"
rust_target = "bekas.plugins.rust_target:RustTargetPlugin"
git_branches = "bekas.plugins.git_branches:GitBranchesPlugin"
python_cache = "bekas.plugins.python_cache:PythonCachePlugin"
downloads = "bekas.plugins.downloads:DownloadsPlugin"
screenshots = "bekas.plugins.screenshots:ScreenshotsPlugin"
system_tmp = "bekas.plugins.system_tmp:SystemTmpPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bekas"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"src/bekas/plugin.py" = ["ARG002", "SIM110"]
"src/bekas/plugins/*.py" = ["ARG002", "SIM105"]
"src/bekas/cli.py" = ["ARG001"]
"src/bekas/runner.py" = ["SIM105"]
"src/bekas/clean.py" = ["ARG001"]
"src/bekas/locking.py" = ["SIM115"]
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005", "E501", "F841", "UP017"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=bekas --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["src/bekas"]

[tool.coverage.report]
show_missing = true
